Delete existing posts

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,6 +15,7 @@
         title: <%= posts[postId].title %>
         content: <%= posts[postId].content %>
         <a href="/update-post/<%= postId %>">Edit</a>
+        <a href="/delete-post/<%= postId %>">Delete</a">
       </li>
     <% } %>
   </ul>
