Include img_url in posts

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,6 +20,7 @@
           <li>
             <article>
               <h2><%= posts[postId].title %></h2>
+              <img src="<%= posts[postId].img_url %>" alt="post image">
               <p><%= posts[postId].content %></p>
             </article>
             <div>
