--- a/views/create_post.ejs
+++ b/views/create_post.ejs
@@ -11,6 +11,9 @@
     <label for="title">Title:</label>
     <input type="text" id="title" name="title" required>
     <br>
+    <label for "img_url">Image URL:</label>
+    <input type="url" id="img_url" name="img_url" required>
+    <br>
     <label for="content">Content:</label>
     <textarea id="content" name="content" rows="4" required></textarea>
     <br>
