--- a/views/update_post.ejs
+++ b/views/update_post.ejs
@@ -11,6 +11,9 @@
   <label for="title">Title:</label>
   <input type="text" id="title" name="title" value="<%= posts[postId].title %>" required>
   <br>
+  <label for "img_url">Image URL:</label>
+  <input type="url" id="img_url" name="img_url" value="<%= posts[postId].img_url %>" required>
+  <br>
   <label for="content">Content:</label>
   <textarea id="content" name="content" rows="4" required><%= posts[postId].content %></textarea>
   <br>
