Place a background image on section welcome

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,8 +9,10 @@
 <body>
   <main>
     <section class="welcome">
-      <h1>Welcome to My Blog</h1>
-      <a href="/create-post" class="btn btn-create">Create Post</a>
+      <div class="welcome-text">
+        <h1>Welcome to My Blog</h1>
+        <a href="/create-post" class="btn btn-create">Create Post</a>
+      </div>
     </section>
     <section class="posts">
       <ul>
