--- a/public/css/index.css
+++ b/public/css/index.css
@@ -9,24 +9,34 @@ body {
     line-height: 1.6;
 }
 
-main {
+/* main {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+} */
+
+/* section {
+    max-width: 800px;
+    width: 100%;
+} */
+
+section.welcome {
+    background-image: url("/assets/img/home-bg.jpg");
+    padding: 10rem 0;
+    display: flex;
+    justify-content: center;
 }
 
-section {
+div.welcome-text {
     max-width: 800px;
     width: 100%;
 }
 
-section.welcome {
-    margin: 8rem 0;
-}
-
 h1 {
     font-size: 5rem;
+    font-weight: 800;
+    color: white;
 }
 
 .btn-create {
