--- a/public/css/index.css
+++ b/public/css/index.css
@@ -39,14 +39,75 @@ h1 {
     color: white;
 }
 
+.btn {
+    display: inline-block;
+    padding: 0.5rem 1rem;
+    text-decoration: none;
+    font-weight: bold;
+    border-radius: 4px;
+}
+
 .btn-create {
+    background-color: #3962ad;
+    color: white;
     font-size: 1.5rem;
 }
 
-.posts li {
-    list-style-type: none;
+.btn-edit {
+    background-color: #4CAF50;
+    color: white;
+    font-size: 1.125rem;
+}
+  
+.btn-delete {
+    background-color: #f44336;
+    color: white;
+    font-size: 1.125rem;
+}
+  
+.btn:hover {
+    opacity: 0.8;
 }
 
-.posts img {
+section.posts {
+    padding: 5rem 0;
+}
+
+.post-list {
+    list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+}
+
+.post-item {
+    max-width: 800px;
     width: 100%;
+}
+
+.post-title {
+    font-size: 2.25rem;
+}
+
+.post-img {
+    width: 100%;
+    margin-bottom: 1rem;
+}
+
+.post-content {
+    margin-bottom: 1rem;
+    font-size: 1.25rem;
+}
+
+.post-actions {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.post-date {
+    display: inline-block;
+    margin-bottom: 1rem;
+    font-size: 1.125rem;
 }
