--- a/views/create_post.ejs
+++ b/views/create_post.ejs
@@ -4,18 +4,18 @@
   <meta charset="UTF-8">
   <viewport content="width=device-width, initial-scale=1.0">
   <title>Create New Post</title>
-  <link rel="stylesheet" href="css/create_post.css">
+  <!-- <link rel="stylesheet" href="css/create_post.css"> -->
   <script src="/vendor/tinymce/tinymce.min.js"></script>
 </head>
 <body>
   <h1>Create a New Post</h1>
-  <form action="/create-post", method="post">
+  <form action="/create-post" method="post">
     <div class="form-group">
       <label for="title">Title:</label>
       <input type="text" id="title" name="title" required>
     </div>
     <div class="form-group">
-      <label for "img_url">Image URL:</label>
+      <label for="img_url">Image URL:</label>
       <input type="url" id="img_url" name="img_url" required>
     </div>
     <div class="form-group">
@@ -27,9 +27,15 @@
   <script>
     tinymce.init({
       selector: "#content",
+      
       license_key: "gpl",
       plugins: "advlist autolink lists link image charmap preview anchor",
-      toolbar: "undo redo | formatselect | bold italic backcolor | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | removeformat | help"
+      toolbar: "undo redo | formatselect | bold italic backcolor | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | removeformat | help",
+      setup: function (editor) {
+        editor.on('change', function () {
+            tinymce.triggerSave();
+        })
+      }
     });
   </script>
 </body>
