--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <viewport content="width=device-width, initial-scale=1.0">
-  <title>My Blog</title>
-  <link rel="stylesheet" href="css/index.css">
-</head>
+<%- include("partials/head.ejs", {
+    title: "My Blog",
+    styles: ["base.css", "header.css", "index.css"]
+})%>
+
 <body>
+  <%- include("partials/header.ejs", {
+    title: "Welcome to My Blog &#128052; &#129412; &#128052;",
+    showCreatePostButton: true
+  }) %>
   <main>
-    <section class="welcome">
-      <div class="welcome-text">
-        <h1>Welcome to My Blog</h1>
-        <a href="/create-post" class="btn btn-create">Create Post</a>
-      </div>
-    </section>
     <section class="posts">
       <ul class="post-list">
         <% for (const postId in posts) { %>
