--- a/public/css/create_post.css
+++ b/public/css/create_post.css
@@ -1,21 +1,22 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-  }
+section.page-header {
+    background-image: url("/assets/img/post-bg.jpg");
+    background-size: cover;
+}
   
-  .container {
-    max-width: 600px;
-    margin: 0 auto;
+  /* Form styles */
+  form {
+    background-color: #fff;
     padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    max-width: 600px;
+    width: 100%;
   }
   
-  h1 {
-    text-align: center;
-  }
+ 
   
   .form-group {
-    margin-bottom: 20px;
+    margin-bottom: 15px;
   }
   
   label {
@@ -32,6 +33,20 @@ body {
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
-    font-size: 16px;
+  }
+  
+  button[type="submit"] {
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    display: block;
+    margin: 0 auto;
+  }
+  
+  button[type="submit"]:hover {
+    background-color: #45a049;
   }
   
