--- a/views/create_post.ejs
+++ b/views/create_post.ejs
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <%- include("partials/head.ejs", {
-    title: "Create Post",
-    styles: ["base.css", "header.css", "create_post.css"],
-    extraHead: "<script src='/vendor/tinymce/tinymce.min.js'></script>",
+  title: "Create Post",
+  styles: ["base.css", "header.css", "create_post.css", "post_form.css"],
+  extraHead: "<script src='/vendor/tinymce/tinymce.min.js'></script>",
 })%>
 
 <body>
