--- a/views/update_post.ejs
+++ b/views/update_post.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <%- include("partials/head.ejs", {
   title: "Update Post",
-  styles: ["base.css", "header.css", "create_post.css"],
+  styles: ["base.css", "header.css", "update_post.css", "post_form.css"],
   extraHead: "<script src='/vendor/tinymce/tinymce.min.js'></script>",
 })%>
 
