--- a/views/partials/post_form.ejs
+++ b/views/partials/post_form.ejs
@@ -11,5 +11,5 @@
     <label for="content">Content:</label>
     <textarea id="content" name="content" required><%= post.content %></textarea>
   </div>
-  <button type="submit">Submit</button>
+  <button class="btn" type="submit">Submit Post</button>
 </form>
