--- a/public/css/update_post.css
+++ b/public/css/update_post.css
@@ -1,7 +1,7 @@
 section.page-header {
-    background-image: url("/assets/img/post-bg.jpg");
+    background-image: url("/assets/img/edit-bg.jpg");
     background-size: cover;
-} 
+}
 
 main {
     display: flex;
