--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,9 +1,12 @@
 <header>
   <section class="page-header">
     <div class="page-header-text">
-      <h1><%- title %></h1>
+        <h1><%- title %></h1>
+    </div>
+    
+    <div class="page-header-button">
       <% if (showCreatePostButton) {%>
-        <a href="/create-post" class="btn btn-create">Create Post</a>
+        <a href="/create-post" class="btn btn-create">Create New Post</a>
       <% } %>
     </div>
   </section>
